k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giin-website-service
spec:
  selector:
    app: giin-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
