k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giin-website-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    # Cloudflare / WAF integration headers can be added here
spec:
  tls:
  - hosts:
    - giin.com
    secretName: giin-tls-secret
  rules:
  - host: giin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giin-website-service
            port:
              number: 80
